--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 
         <div class="mx-auto text-center text-light bg-dark p-3" style="margin-bottom: -70px;">
-            <h2 id="BirthdayTitle" style="font-weight: bolder;">&#10084; শুভ জন্মদিন, আশা! &#10084;</h2>
+            <h2 id="BirthdayTitle" style="font-weight: bolder;">&#10084; শুভ জন্মদিন, আশা বউ! &#10084;</h2>
             <!--  -->
         </div>
         <section class="container-fluid" id="Loginform" style="display: block;">
@@ -573,7 +573,7 @@
                         আমি জানি, আমি তেমন কিছুই দিতে পারি নি এই ওয়েবে। সময়ের অভাবে আর ওয়েবটাকে আকর্ষণীয় করতে গিয়ে হাজার
                         হাজার কনটেন্ট বাদ পরে গেছে। ক্ষমা করে দিও আমাকে। পরবর্তীতে এটাকে আরও আপডেট করবো, কাজ যখন শুরু
                         করেছিই।</p>
-                    <p class="text-center" id="BirthdayTitle"><b>"শুভ জন্মদিন আশা"</b></p>
+                    <p class="text-center" id="BirthdayTitle"><b>"শুভ জন্মদিন আশা বউ"</b></p>
                     <p>আমি তোমাকে অনেক অনেক অনেক ভালবাসি।</p>
                     <p style="text-align: right;">
 
