--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@
                                 </p>
                                 <div class="mb-3">
                                     <label for="exampleFormControlInput1" class="form-label">Your Couple Name</label>
-                                    <input type="email" class="form-control" id="name" placeholder="Merasha">
+                                    <input type="email" class="form-control" id="name" placeholder="আমাদের নাম কি?🤭">
                                 </div>
 
                                 <div class="mb-3">
                                     <label for="exampleFormControlInput1" class="form-label">Your Password</label>
-                                    <input type="password" class="form-control" id="password" placeholder="XXXXXXX">
+                                    <input type="password" class="form-control" id="password" placeholder="তোমার নাম কি?🤭">
                                 </div>
                                 <div class="mx-auto">
                                     <button id="login" style="width: 100%;" class="btn btn-warning mb-3"><a
