--- a/index.html
+++ b/index.html
@@ -76,19 +76,19 @@
                                     <img class="img-fluid" style="height: 100px; width: 100px; border-radius: 50%;"
                                         src="images/content/user.png" alt="">
                                 </div>
-                                <h4 style="color: #A020F0;" class="text-center my-3"><b>&#10084; Merasha Login
+                                <h4 style="color: #A020F0;" class="text-center my-3"><b>&#10084; মেরাশা লগইন
                                         &#10084;</b>
                                 </h4>
-                                <p class="mb-3">Please provide credential provided by <span
-                                        class="btn btn-warning"><b>"Meraz"</b></span>
+                                <p class="mb-3"> আইডি আর পাসওয়ার্ড দাও যা দিয়েছে তোমার জামাই <span
+                                        class="btn btn-warning"><b>"মেরাজ"</b></span>
                                 </p>
                                 <div class="mb-3">
-                                    <label for="exampleFormControlInput1" class="form-label">Your Couple Name</label>
+                                    <label for="exampleFormControlInput1" class="form-label">আমাদের নাম?</label>
                                     <input type="email" class="form-control" id="name" placeholder="আমাদের নাম কি?🤭">
                                 </div>
 
                                 <div class="mb-3">
-                                    <label for="exampleFormControlInput1" class="form-label">Your Password</label>
+                                    <label for="exampleFormControlInput1" class="form-label">পাসওয়ার্ড</label>
                                     <input type="password" class="form-control" id="password" placeholder="তোমার নাম কি?🤭">
                                 </div>
                                 <div class="mx-auto">
