--- a/index.html
+++ b/index.html
@@ -93,10 +93,8 @@
                                 </div>
                                 <div class="mx-auto">
                                     <button id="login" style="width: 100%;" class="btn btn-warning mb-3"><a
-                                            class="btn btn-warning" style="width: 100%;" href="#top">Get
-                                            me
-                                            into
-                                            <span><b>Merasha</b></span>'s World!!!</a></button>
+                                            class="btn btn-warning" style="width: 100%;" href="#top">আমাকে
+                                            <span><b>মেরাশা'র</b></span> দুনিয়ায় নিয়ে যাও!!!</a></button>
                                 </div>
                             </div>
                         </div>
